@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-26
+2015-01-13 Mikhail S. Dubrovin	
+- NDArrIOV1 - add print_bits parameter in static method save_ndarray (PSAS-44)
+	
 Tag: V00-05-25
 2015-01-06 Mikhail S. Dubrovin	
 - NDArrIOV1.cpp - add instatiation of templates for int16_t, uint8_t
